--- a/src/app/todo/page/page.component.html
+++ b/src/app/todo/page/page.component.html
@@ -1,4 +1,4 @@
-<!-- {{todos|async|json}} -->
+{{todos|async}}
 <ul class="collection" >
   <li class="collection-item" *ngFor="let t of todos | async " (click)="OnClick(t)">{{t?.Title}}</li>
 </ul>
